--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <canvas id="bg"></canvas>
 
   <!-- Three.js -->
-  <script src="https://unpkg.com/three@0.161.0/build/three.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 
   <!-- Orbit Controls -->
-  <script src="https://unpkg.com/three@0.161.0/examples/js/controls/OrbitControls.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/examples/js/controls/OrbitControls.js"></script>
 
   <script src="js/main.js"></script>
 </body>
